k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emdr42
  labels:
    app.kubernetes.io/name: emdr42
    app.kubernetes.io/part-of: emdr42
